Defining content projection fallback

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,7 @@
         <a href="/">Management</a>
       </li>
       <li>
-        <button appButton>
-          Logout
-          <span ngProjectAs="icon">→</span>
-        </button>
+        <button appButton>Logout</button>
       </li>
     </ul>
   </nav>
