--- a/src/app/dashboard/server-status/server-status.component.html
+++ b/src/app/dashboard/server-status/server-status.component.html
@@ -5,6 +5,9 @@
     'status-offline': currentStatus === 'offline',
     'status-unknown': currentStatus !== 'online' && currentStatus !== 'offline'
   }"
+  [style]="{
+    'font-size': '1.5rem',
+  }"
 >
   @if (currentStatus === 'online') {
   <p>Servers are online</p>
