Updated the ticket component (inputs and signals)

--- a/src/app/dashboard/support-tickets/support-tickets.component.html
+++ b/src/app/dashboard/support-tickets/support-tickets.component.html
@@ -2,8 +2,8 @@
   <ul>
     @for (ticket of tickets; track ticket.id) {
     <li>
-      <app-ticket />
-      {{ $count }}
+      <app-ticket [data]="ticket" />
+      <!-- {{ $count }} -->
     </li>
     } @empty {
     <p>No tickets available</p>
